--- a/myblog/Front-End/Angular/Angular API练习/自定义表单使用方式.md
+++ b/myblog/Front-End/Angular/Angular API练习/自定义表单使用方式.md
@@ -37,8 +37,16 @@ writeValue(value: any): void {
 }
 ```
 
-`registreOnChange()`原生UI视图值更新时被触发的回调函数，
-它在Form API 初始化时被调用，当UI视图中值变化的同时更新模型中的值，即（view->model）。可以
+`registreOnChange()`生UI视图值更新时被触发的回调函数，它在Form API 初始化时被调用，当UI视图中值变化的同时更新模型中的值，即（view->model）。
+
+如果在`valueAccessor`中实现`registerOnchange`，可以保存指定的函数，并且可以在合适的时候调用它：
+```ts
+registerOnChange(fn: (_: any) => void): void {
+  this._onChange = fn;
+}
+```
+
+当UI中的值改变时，可以调用这个已经注册的函数`_onChange`，
 
 `setDisabledState()`当`control.disabled`状态改变时时被调用，它会同步改变DOM元素的状态为`disable`或者`enable`，它的用法为：
 
@@ -47,3 +55,8 @@ setDisabledState(isDisabled: boolean): void {
   this._renderer.setProperty(this._elementRef.nativeElement, 'disabled', isDisabled);
 }
 ```
+
+搞了这么久，理解了这么多概念，为什么不使用EventEmitter呢？其实上文我们提到`Reactive Form`这个概念，`Reactive Form`中自定义`Validate`更加灵活，所以自定义表单中，利用接口的特点，也可以很容易实现自定义校验。
+所以除了简化工作之外，清晰逻辑（理解之后就会觉得更为清晰），还有增强的校验功能。
+
+
